--- a/index.html
+++ b/index.html
@@ -48,17 +48,45 @@
       font-size: 1rem;
     }
 
-    main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .profile-container {
+      position: relative;
+      text-align: center;
+      padding: 40px 20px 0;
+      z-index: 2;
+    }
+
+    .profile-box {
+      display: inline-block;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 24px 32px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .profile-pic {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      border: 3px solid white;
+      margin-bottom: 16px;
+    }
+
+    .titles h2 {
+      margin: 8px 0;
+      font-weight: 500;
+      color: white;
+      font-size: 1.5rem;
     }
 
     .banner-section {
       position: relative;
       width: 100%;
-      height: 65vh;
+      height: 60vh;
       overflow: hidden;
+      margin-top: -50px; /* pulls up banner image to overlap nicely */
     }
 
     .banner-img {
@@ -67,36 +95,6 @@
       object-fit: cover;
       object-position: center;
       display: block;
-    }
-
-    .banner-overlay {
-      position: absolute;
-      bottom: 20px;
-      left: 40px;
-      display: flex;
-      align-items: center;
-      gap: 24px;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 20px 30px;
-      border-radius: 12px;
-    }
-
-    .profile-pic {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      border: 3px solid white;
-    }
-
-    .titles h2 {
-      margin: 0;
-      font-weight: 500;
-      color: white;
-      font-size: 1.8rem;
-      letter-spacing: 0.3px;
     }
 
     .container {
@@ -108,7 +106,7 @@
       display: flex;
       flex-direction: column;
       gap: 60px;
-      margin: 60px 0;
+      margin: 60px auto;
     }
 
     h3 {
@@ -162,9 +160,7 @@
       width: 20px;
       height: 20px;
       margin-right: 8px;
-      vertical-align: middle;
       fill: #222;
-      transition: fill 0.3s ease;
     }
 
     .contact-links a:hover svg {
@@ -178,40 +174,28 @@
       color: #666;
     }
 
-    /* Mobile styles */
     @media (max-width: 768px) {
       header {
         padding: 16px 20px;
         font-size: 1rem;
       }
 
-      .banner-section {
-        height: 70vh;
+      .profile-container {
+        padding: 30px 10px 0;
       }
 
-      .banner-overlay {
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 16px;
-        bottom: 16px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.4);
-        border-radius: 10px;
-        width: 90%;
-      }
-
-      .titles h2 {
-        font-size: 1rem;
-        text-align: center;
-        line-height: 1.4;
-        margin: 4px 0;
+      .profile-box {
+        padding: 20px;
+        border-radius: 12px;
       }
 
       .profile-pic {
-        width: 80px;
-        height: 80px;
-        margin-bottom: 8px;
+        width: 100px;
+        height: 100px;
+      }
+
+      .titles h2 {
+        font-size: 1.2rem;
       }
 
       .container {
@@ -235,62 +219,67 @@
     </div>
   </header>
 
-  <main>
-    <div class="banner-section">
-      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
-      <div class="banner-overlay">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
-        <div class="titles">
-          <h2>Product Designer</h2>
-          <h2>Product Development Manager</h2>
-        </div>
+  <!-- Profile section above banner -->
+  <div class="profile-container">
+    <div class="profile-box">
+      <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
+      <div class="titles">
+        <h2>Product Designer</h2>
+        <h2>Product Development Manager</h2>
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="column">
-          <h3>About Me</h3>
-          <p>
-            I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
-          </p>
-        </div>
+  <!-- Banner section -->
+  <div class="banner-section">
+    <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
+  </div>
 
-        <div class="column">
-          <h3>Experience</h3>
-          <ul>
-            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-            <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-            <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-          </ul>
+  <!-- Main content -->
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <h3>About Me</h3>
+        <p>
+          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
+        </p>
+      </div>
 
-          <h3 style="margin-top: 30px;">Skills</h3>
-          <ul>
-            <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-            <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-            <li><strong>Rapid Prototyping</strong></li>
-            <li><strong>User-Centred Design</strong></li>
-            <li><strong>Production Coordination</strong></li>
-          </ul>
-        </div>
+      <div class="column">
+        <h3>Experience</h3>
+        <ul>
+          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+        </ul>
+
+        <h3 style="margin-top: 30px;">Skills</h3>
+        <ul>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+          <li><strong>Rapid Prototyping</strong></li>
+          <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
+        </ul>
       </div>
     </div>
+  </div>
 
-    <div class="contact-section">
-      <h3>Contact Me</h3>
-      <div class="contact-links">
-        <a href="mailto:jack.simm.design@gmail.com">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
-          Email Me
-        </a>
-        <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
-          Instagram
-        </a>
-      </div>
+  <!-- Contact -->
+  <div class="contact-section">
+    <h3>Contact Me</h3>
+    <div class="contact-links">
+      <a href="mailto:jack.simm.design@gmail.com">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
+        Email Me
+      </a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
+        Instagram
+      </a>
     </div>
-  </main>
+  </div>
 
   <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
