--- a/index.html
+++ b/index.html
@@ -48,45 +48,11 @@
       font-size: 1rem;
     }
 
-    .profile-container {
-      position: relative;
-      text-align: center;
-      padding: 40px 20px 0;
-      z-index: 2;
-    }
-
-    .profile-box {
-      display: inline-block;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 24px 32px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
-
-    .profile-pic {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      border: 3px solid white;
-      margin-bottom: 16px;
-    }
-
-    .titles h2 {
-      margin: 8px 0;
-      font-weight: 500;
-      color: white;
-      font-size: 1.5rem;
-    }
-
     .banner-section {
       position: relative;
       width: 100%;
       height: 60vh;
       overflow: hidden;
-      margin-top: -50px; /* pulls up banner image to overlap nicely */
     }
 
     .banner-img {
@@ -95,6 +61,36 @@
       object-fit: cover;
       object-position: center;
       display: block;
+    }
+
+    .profile-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 0, 0, 0.6);
+      padding: 30px 40px;
+      border-radius: 16px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    .profile-pic {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin-bottom: 16px;
+    }
+
+    .titles h2 {
+      margin: 8px 0;
+      font-weight: 500;
+      color: white;
+      font-size: 1.5rem;
     }
 
     .container {
@@ -180,13 +176,12 @@
         font-size: 1rem;
       }
 
-      .profile-container {
-        padding: 30px 10px 0;
-      }
-
-      .profile-box {
+      .profile-overlay {
+        position: static;
+        transform: none;
+        margin: 20px auto 0;
+        width: 90%;
         padding: 20px;
-        border-radius: 12px;
       }
 
       .profile-pic {
@@ -219,20 +214,16 @@
     </div>
   </header>
 
-  <!-- Profile section above banner -->
-  <div class="profile-container">
-    <div class="profile-box">
+  <!-- Banner section with overlayed profile box (desktop) -->
+  <div class="banner-section">
+    <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
+    <div class="profile-overlay">
       <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
       <div class="titles">
         <h2>Product Designer</h2>
         <h2>Product Development Manager</h2>
       </div>
     </div>
-  </div>
-
-  <!-- Banner section -->
-  <div class="banner-section">
-    <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
   </div>
 
   <!-- Main content -->
