--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       background: #d7e5db;
       color: #333;
       line-height: 1.6;
-      font-size: 17px;
     }
 
     header {
@@ -25,7 +24,6 @@
 
     .left {
       cursor: pointer;
-      letter-spacing: 0.5px;
     }
 
     .dropdown {
@@ -51,7 +49,7 @@
     .banner-section {
       position: relative;
       width: 100%;
-      height: 60vh;
+      height: 70vh;
       overflow: hidden;
     }
 
@@ -60,49 +58,44 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
-      display: block;
     }
 
     .profile-overlay {
       position: absolute;
       top: 50%;
-      left: 40px;
+      left: 50px;
       transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.65);
-      padding: 30px 40px;
+      padding: 20px 30px;
       border-radius: 16px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      max-width: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 400px;
     }
 
     .profile-pic {
-      width: 140px;
-      height: 140px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
       border: 3px solid white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      margin-bottom: 16px;
+      margin-bottom: 12px;
     }
 
     .titles h2 {
-      margin: 8px 0;
-      font-weight: 500;
       color: white;
-      font-size: 1.5rem;
+      margin: 5px 0;
+      font-size: 1.4rem;
+      text-align: center;
     }
 
     .container {
-      width: 85%;
-      max-width: 1200px;
-      background: #fff;
+      max-width: 1100px;
+      background: white;
       border-radius: 16px;
       padding: 60px;
-      display: flex;
-      flex-direction: column;
-      gap: 60px;
       margin: 60px auto;
     }
 
@@ -113,29 +106,23 @@
       color: #222;
     }
 
-    ul {
-      padding-left: 20px;
-      margin-top: 10px;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    strong {
-      color: #000;
-    }
-
     .row {
       display: flex;
-      gap: 60px;
-      align-items: flex-start;
       flex-wrap: wrap;
+      gap: 60px;
     }
 
     .column {
       flex: 1;
       min-width: 300px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 10px;
     }
 
     .contact-section {
@@ -150,7 +137,6 @@
       display: inline-flex;
       align-items: center;
       font-weight: 600;
-      font-size: 1rem;
     }
 
     .contact-links svg {
@@ -172,13 +158,17 @@
     }
 
     @media (max-width: 768px) {
+      .banner-section {
+        height: 40vh;
+      }
+
       .profile-overlay {
         position: static;
         transform: none;
-        background: rgba(0, 0, 0, 0.65);
         margin: 20px auto 0;
-        width: 90%;
+        background: rgba(0,0,0,0.7);
         padding: 20px;
+        max-width: 90%;
       }
 
       .profile-pic {
@@ -192,10 +182,7 @@
 
       .container {
         padding: 20px;
-      }
-
-      .banner-section {
-        height: 50vh;
+        margin: 30px auto;
       }
 
       .contact-links a {
@@ -234,7 +221,6 @@
           I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
         </p>
       </div>
-
       <div class="column">
         <h3>Experience</h3>
         <ul>
