--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     }
 
     .banner-section {
-      position: relative;
       width: 100%;
       height: 70vh;
       overflow: hidden;
+      position: relative;
     }
 
     .banner-img {
@@ -89,6 +89,30 @@
       margin: 5px 0;
       font-size: 1.4rem;
       text-align: center;
+    }
+
+    .mobile-profile {
+      display: none;
+      text-align: center;
+      padding: 30px 20px;
+      background: rgba(0, 0, 0, 0.7);
+      margin-top: -10px;
+    }
+
+    .mobile-profile img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      margin-bottom: 12px;
+    }
+
+    .mobile-profile h2 {
+      color: white;
+      margin: 5px 0;
+      font-size: 1.2rem;
     }
 
     .container {
@@ -158,26 +182,12 @@
     }
 
     @media (max-width: 768px) {
-      .banner-section {
-        height: 40vh;
-      }
-
       .profile-overlay {
-        position: static;
-        transform: none;
-        margin: 20px auto 0;
-        background: rgba(0,0,0,0.7);
-        padding: 20px;
-        max-width: 90%;
+        display: none;
       }
 
-      .profile-pic {
-        width: 100px;
-        height: 100px;
-      }
-
-      .titles h2 {
-        font-size: 1.2rem;
+      .mobile-profile {
+        display: block;
       }
 
       .container {
@@ -188,6 +198,10 @@
       .contact-links a {
         display: block;
         margin: 12px auto;
+      }
+
+      .banner-section {
+        height: 40vh;
       }
     }
   </style>
@@ -211,6 +225,12 @@
         <h2>Product Development Manager</h2>
       </div>
     </div>
+  </div>
+
+  <div class="mobile-profile">
+    <img src="profile.jpg" alt="Jack Simm" />
+    <h2>Product Designer</h2>
+    <h2>Product Development Manager</h2>
   </div>
 
   <div class="container">
