--- a/index.html
+++ b/index.html
@@ -93,10 +93,14 @@
 
     .mobile-profile {
       display: none;
-      text-align: center;
-      padding: 30px 20px;
       background: rgba(0, 0, 0, 0.7);
-      margin-top: -10px;
+      text-align: center;
+      padding: 20px;
+      margin: 40px 20px;
+      border-radius: 16px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .mobile-profile img {
