--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     .banner-section {
       width: 100%;
-      height: 70vh;
+      height: 85vh;
       overflow: hidden;
       position: relative;
     }
@@ -62,16 +62,16 @@
 
     .profile-overlay {
       position: absolute;
-      top: 50%;
+      bottom: 40px;
       left: 50px;
-      transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.65);
-      padding: 20px 30px;
-      border-radius: 16px;
+      padding: 25px 40px;
+      border-radius: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 400px;
+      width: 450px;
+      max-width: 90%;
     }
 
     .profile-pic {
@@ -205,7 +205,7 @@
       }
 
       .banner-section {
-        height: 40vh;
+        height: 45vh;
       }
     }
   </style>
