--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #d7e5db;
       color: #333;
-      line-height: 1.6;
     }
 
     header {
@@ -43,12 +42,11 @@
       text-decoration: none;
       color: #222;
       font-weight: 500;
-      font-size: 1rem;
     }
 
     .banner-section {
       width: 100%;
-      height: 85vh;
+      height: 95vh;
       overflow: hidden;
       position: relative;
     }
@@ -64,14 +62,15 @@
       position: absolute;
       bottom: 40px;
       left: 50px;
-      background: rgba(0, 0, 0, 0.65);
+      background: rgba(0, 0, 0, 0.7);
       padding: 25px 40px;
       border-radius: 20px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      width: 450px;
+      width: 550px;
       max-width: 90%;
+      gap: 20px;
     }
 
     .profile-pic {
@@ -81,14 +80,19 @@
       object-fit: cover;
       filter: grayscale(100%);
       border: 3px solid white;
-      margin-bottom: 12px;
+    }
+
+    .titles {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .titles h2 {
       color: white;
-      margin: 5px 0;
+      margin: 4px 0;
       font-size: 1.4rem;
-      text-align: center;
+      text-align: left;
     }
 
     .mobile-profile {
