--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     .banner-section {
       width: 100%;
-      height: 110vh;
+      height: 120vh;
       overflow: hidden;
       position: relative;
     }
@@ -60,9 +60,9 @@
 
     .profile-overlay {
       position: absolute;
-      bottom: 40px;
+      bottom: 60px;
       left: 50px;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.75);
       padding: 25px 40px;
       border-radius: 20px;
       display: flex;
@@ -86,6 +86,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: flex-start;
     }
 
     .titles h2 {
@@ -97,7 +98,7 @@
 
     .mobile-profile {
       display: none;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.75);
       text-align: center;
       padding: 20px;
       margin: 40px 20px;
@@ -209,7 +210,7 @@
       }
 
       .banner-section {
-        height: 70vh;
+        height: 85vh;
       }
     }
   </style>
@@ -274,12 +275,10 @@
     <h3>Contact Me</h3>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
-        Email Me
+        📧 Email Me
       </a>
       <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
-        Instagram
+        📸 Instagram
       </a>
     </div>
   </div>
