--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
   <style>
     body {
@@ -10,8 +10,6 @@
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #d7e5db;
       color: #333;
-      line-height: 1.6;
-      font-size: 17px;
     }
 
     header {
@@ -20,17 +18,11 @@
       align-items: center;
       padding: 20px 40px;
       font-weight: 600;
-      font-size: 1.2rem;
-      position: sticky;
-      top: 0;
-      background: #d7e5db;
-      z-index: 999;
+      font-size: 1.1rem;
     }
 
     .left {
       cursor: pointer;
-      letter-spacing: 0.5px;
-      padding: 12px 16px;
     }
 
     .dropdown {
@@ -38,7 +30,7 @@
       top: 60px;
       left: 40px;
       background: white;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 6px;
       display: none;
       flex-direction: column;
@@ -50,65 +42,93 @@
       text-decoration: none;
       color: #222;
       font-weight: 500;
-      font-size: 1rem;
     }
 
     .banner-section {
-      position: relative;
       width: 100%;
-      height: 70vh;
+      height: 120vh;
       overflow: hidden;
+      position: relative;
     }
 
     .banner-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: top center;
-      display: block;
+      object-position: center;
     }
 
-    .banner-overlay {
+    .profile-overlay {
       position: absolute;
-      bottom: 40px;
-      left: 40px;
+      bottom: 60px;
+      left: 50px;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 25px 40px;
+      border-radius: 20px;
       display: flex;
+      flex-direction: row;
       align-items: center;
-      gap: 24px;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 20px 30px;
-      border-radius: 12px;
-      max-width: 600px;
+      width: 550px;
+      max-width: 90%;
+      gap: 20px;
     }
 
     .profile-pic {
-      width: 160px;
-      height: 160px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       border: 3px solid white;
     }
 
+    .titles {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
     .titles h2 {
-      margin: 0;
-      font-weight: 500;
       color: white;
-      font-size: 1.8rem;
-      letter-spacing: 0.3px;
+      margin: 4px 0;
+      font-size: 1.4rem;
       text-align: left;
     }
 
+    .mobile-profile {
+      display: none;
+      background: rgba(0, 0, 0, 0.75);
+      text-align: center;
+      padding: 20px;
+      margin: 40px 20px;
+      border-radius: 16px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .mobile-profile img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      margin-bottom: 12px;
+    }
+
+    .mobile-profile h2 {
+      color: white;
+      margin: 5px 0;
+      font-size: 1.2rem;
+    }
+
     .container {
-      width: 85%;
-      max-width: 1200px;
-      background: #fff;
+      max-width: 1100px;
+      background: white;
       border-radius: 16px;
       padding: 60px;
-      display: flex;
-      flex-direction: column;
-      gap: 60px;
       margin: 60px auto;
     }
 
@@ -119,29 +139,23 @@
       color: #222;
     }
 
-    ul {
-      padding-left: 20px;
-      margin-top: 10px;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    strong {
-      color: #000;
-    }
-
     .row {
       display: flex;
-      gap: 60px;
-      align-items: flex-start;
       flex-wrap: wrap;
+      gap: 60px;
     }
 
     .column {
       flex: 1;
       min-width: 300px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 10px;
     }
 
     .contact-section {
@@ -152,19 +166,17 @@
     .contact-links a {
       color: #222;
       text-decoration: none;
-      margin: 10px auto;
+      margin: 0 15px;
       display: inline-flex;
       align-items: center;
       font-weight: 600;
-      font-size: 1.1rem;
-      gap: 8px;
     }
 
     .contact-links svg {
-      width: 22px;
-      height: 22px;
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
       fill: #222;
-      transition: fill 0.3s ease;
     }
 
     .contact-links a:hover svg {
@@ -179,33 +191,26 @@
     }
 
     @media (max-width: 768px) {
-      .banner-section {
-        height: 60vh;
+      .profile-overlay {
+        display: none;
       }
 
-      .banner-overlay {
-        flex-direction: column;
-        align-items: center;
-        bottom: 10%;
-        left: 10%;
-        right: 10%;
-        padding: 20px;
-        max-width: unset;
-      }
-
-      .profile-pic {
-        width: 120px;
-        height: 120px;
-      }
-
-      .titles h2 {
-        font-size: 1.4rem;
-        text-align: center;
+      .mobile-profile {
+        display: block;
       }
 
       .container {
-        margin: 30px 10px;
         padding: 20px;
+        margin: 30px auto;
+      }
+
+      .contact-links a {
+        display: block;
+        margin: 12px auto;
+      }
+
+      .banner-section {
+        height: 85vh;
       }
     }
   </style>
@@ -220,62 +225,63 @@
     </div>
   </header>
 
-  <main>
-    <div class="banner-section">
-      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
-      <div class="banner-overlay">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
-        <div class="titles">
-          <h2>Product Designer</h2>
-          <h2>Product Development Manager</h2>
-        </div>
+  <div class="banner-section">
+    <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
+    <div class="profile-overlay">
+      <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
+      <div class="titles">
+        <h2>Product Designer</h2>
+        <h2>Product Development Manager</h2>
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="column">
-          <h3>About Me</h3>
-          <p>
-            I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
-          </p>
-        </div>
+  <div class="mobile-profile">
+    <img src="profile.jpg" alt="Jack Simm" />
+    <h2>Product Designer</h2>
+    <h2>Product Development Manager</h2>
+  </div>
 
-        <div class="column">
-          <h3>Experience</h3>
-          <ul>
-            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-            <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-            <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-          </ul>
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <h3>About Me</h3>
+        <p>
+          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
+        </p>
+      </div>
+      <div class="column">
+        <h3>Experience</h3>
+        <ul>
+          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+        </ul>
 
-          <h3 style="margin-top: 30px;">Skills</h3>
-          <ul>
-            <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-            <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-            <li><strong>Rapid Prototyping</strong></li>
-            <li><strong>User-Centred Design</strong></li>
-            <li><strong>Production Coordination</strong></li>
-          </ul>
-        </div>
+        <h3 style="margin-top: 30px;">Skills</h3>
+        <ul>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+          <li><strong>Rapid Prototyping</strong></li>
+          <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
+        </ul>
       </div>
     </div>
+  </div>
 
-    <div class="contact-section">
-      <h3>Contact Me</h3>
-      <div class="contact-links">
-        <a href="mailto:jack.simm.design@gmail.com">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
-          Email Me
-        </a>
-        <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
-          Instagram
-        </a>
-      </div>
+  <div class="contact-section">
+    <h3>Contact Me</h3>
+    <div class="contact-links">
+      <a href="mailto:jack.simm.design@gmail.com">
+        📧 Email Me
+      </a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank">
+        📸 Instagram
+      </a>
     </div>
-  </main>
+  </div>
 
   <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
